updated the member deleting process

--- a/static/assets/css/club/club_detail.css
+++ b/static/assets/css/club/club_detail.css
@@ -185,3 +185,10 @@
 .add_manually_data::placeholder{
     color: white !important;
 }
+.removebtn svg,
+.editbtn svg,
+.sendbtn svg{
+    width: 14px !important;
+    height: 14px !important;
+    color: white !important;
+}
